--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
     background: white;
     
     box-shadow: 5px 5px
-     #888888;
+     #eddddd;
 }
 
 p
@@ -20,4 +20,8 @@ p
     padding: 10px 15px;
  
     color: white;
+}
+.foot{
+    background: black; color: white; padding: 5px;
+    float:button;
 }
